recepie part compleated

--- a/views/recepies/edit-post.hbs
+++ b/views/recepies/edit-post.hbs
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-center my-5">
-  <form action="/edit/{{post._id}}" method="POST" enctype="multipart/form-data" style="max-width: 600px;">
+<div class="my-5">
+  <form action="/edit/{{post._id}}" method="POST" class="mx-auto" enctype="multipart/form-data" style="max-width: 600px;">
 
     <legend>Edit Post</legend>
     <div class="mb-3">
