--- a/views/recepies/new-post.hbs
+++ b/views/recepies/new-post.hbs
@@ -1,5 +1,5 @@
-<div class="d-flex justify-content-center my-5">
-  <form action="/newpost" method="POST" enctype="multipart/form-data" style="max-width: 600px;">
+<div class="my-5">
+  <form action="/newpost" method="POST" class="mx-auto" enctype="multipart/form-data" style="max-width: 600px;">
   
     <legend>Create a new Post</legend>
     <div class="mb-3">
