--- a/views/recepies/new-recipe.hbs
+++ b/views/recepies/new-recipe.hbs
@@ -1,16 +1,18 @@
-<form action="/recipe/{{postId}}" class="row g-3" method="POST">
-    <div class="mb-3" id="inputs-container">
-        <label for="formGroupExampleInput" class="form-label">Ingredients:</label>
-        <input type="text" class="form-control mb-2" name="ingredients[]" id="formGroupExampleInput" placeholder="Ingredient">
-    </div>
-    <div class="form-floating">
-        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" name="instructions"></textarea>
-        <label for="floatingTextarea2">Instructions</label>
-    </div>
+<div class="my-3">
+    <form action="/recipe/{{postId}}" class="row g-3 mx-auto" method="POST" style="max-width: 900px;">
+        <div class="mb-3" id="inputs-container">
+            <label for="formGroupExampleInput" class="form-label">Ingredients:</label>
+            <input type="text" class="form-control mb-2" name="ingredients[]" id="formGroupExampleInput" placeholder="Ingredient">
+        </div>
+        <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" name="instructions"></textarea>
+            <label for="floatingTextarea2">Instructions</label>
+        </div>
 
-    <button class="btn btn-secondary" id="add-ingredient">Add ingredient</button>
-    <button type="submit" class="btn btn-dark">Create</button>
-</form>
+        <button class="btn btn-secondary" id="add-ingredient">Add ingredient</button>
+        <button type="submit" class="btn btn-dark">Create</button>
+    </form>
+</div>   
 
 <script>
     const addIngredientBtn = document.querySelector("#add-ingredient");
