--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -3,7 +3,7 @@
 
   <form class="container-sm mx-auto" style="max-width: 400px;" action="/register" method="POST">
     <div class="input-group mb-2">
-      <label class="w-100 mb-2" for="username" style="color: #3498db;">User Name</label>
+      <label class="w-100 mb-2" for="username" style="color: black;">User Name</label>
       <input type="text" name="username"
         class="form-control  py-2 ps-4 {{#if errors.username}}is-invalid{{/if}}" placeholder="Name"
         aria-label="User name" value="{{ user.username }}">
@@ -11,7 +11,7 @@
     </div>
 
     <div class="input-group mb-2">
-      <label class="w-100 mb-2" for="email" style="color: #3498db;">Email</label>
+      <label class="w-100 mb-2" for="email" style="color: black;">Email</label>
       <input type="text" name="email"
         class="form-control  py-2 ps-4 {{#if errors.email}}is-invalid{{/if}}"
         placeholder="Email: muchacho_registrate@example.org" aria-label="User email" value="{{ user.email }}" required>
@@ -19,7 +19,7 @@
     </div>
 
     <div class="input-group mb-3">
-      <label class="w-100 mb-2" for="password" style="color: #3498db;">Password</label>
+      <label class="w-100 mb-2" for="password" style="color: black;">Password</label>
       <input type="password" name="password"
         class="form-control  py-2 ps-4 {{#if errors.password}}is-invalid{{/if}}"
         placeholder="Password 💩" aria-label="User password" required>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="d-grid gap-2">
-      <button type="submit" class="btn btn-primary bg-light-green ">Register</button>
+      <button type="submit" class="btn btn-dark bg-light-green ">Register</button>
     </div>
   </form>
 </div>
