--- a/views/recepies/feed.hbs
+++ b/views/recepies/feed.hbs
@@ -1,7 +1,9 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <div class="my-5 mx-9 container">
   <div class="row row-cols-1 row-cols-md-3 g-4">
     {{#each posts}}
       {{>card post=this currentUser=../currentUser}}
     {{/each}}
   </div>
-</div>
+</div> 
+
