Home page bein updated

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,11 +8,13 @@
 
 
 <section class="container-fluid p-0 m-0 position-relative">
-  <img src="/images/cookit.jpg" class="img-fluid" style="object-fit: cover; width: 100%; height: 100vh;"
+  <img src="https://res.cloudinary.com/ddtg22atq/image/upload/v1705260116/Letscookit/BackGround_dv96tc.jpg" class="img-fluid" style="object-fit: cover; width: 100%; height: 100vh;"
     alt="Background Image">
   <div class="position-absolute top-50 start-50 translate-middle text-center text-white">
     <h1 class="display-3">Welcome to LetsCookIt</h1>
-    <p class="lead">Discover the magic of guessing the recipe 🫨</p>
+    <p class="lead">¡Discover the magic of guessing the recipe!</p>
+    <a class="btn btn-dark " href="/register">Register</a>
+    <a class="btn btn-secondary " href="/login">Login</a>
     <!-- Add any call-to-action buttons or elements here -->
   </div>
 </section>
