--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -1,3 +1,4 @@
+<div id="main-container">
 <div id="signup" class="container col-xxl-4">
   <h1 class="text-center mt-5 mb-4">User Register</h1>
 
@@ -31,3 +32,19 @@
     </div>
   </form>
 </div>
+</div> 
+
+<style>
+    #main-container {
+      background-image: url('https://res.cloudinary.com/ddtg22atq/image/upload/v1705264088/Letscookit/Post_uadqzh.jpg'); /* Reemplaza 'ruta_de_tu_imagen.jpg' con la ruta real de tu imagen */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      min-height: 100vh; /* Ajusta la altura mínima para cubrir la totalidad del viewport */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+  </style>
