--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,7 +19,7 @@
   </div>
 </section>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-<style>
+<!--<style>
   {
     margin: 0px;
     padding: 0px;
@@ -140,4 +140,4 @@
       container.scrollLeft -= 350;
     }
   </script>
-</div> 
+</div>-->
